--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.1.6", features = ["derive"] }
 digest = "0.10.6"
 glob = "0.3.1"
 image = "0.24.5"
+rand = "0.8.5"
 rexiv2 = "0.10.0"
 sha2 = "0.10.6"
 
