--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "imgDB"
 [dependencies]
 blake2 = "0.10.6"
 clap = { version = "4.1.6", features = ["derive"] }
+crc32fast = "1.3.2"
 digest = "0.10.6"
 glob = "0.3.1"
 image = "0.24.5"
