--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,19 @@ description = "A image DB library"
 name = "imgDB"
 
 [dependencies]
+argh = "0.1.10"
 blake2 = "0.10.6"
-clap = { version = "4.1.6", features = ["derive"] }
-crc32fast = "1.3.2"
+crc32fast = "1"
 digest = "0.10.6"
 glob = "0.3.1"
 image = "0.24.5"
 rand = "0.8.5"
 rexiv2 = "0.10.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 sha2 = "0.10.6"
+strum = { version = "0.24.1", features = ["derive"] }
+strum_macros = "0.24.3"
 
 [dev-dependencies]
 criterion = "0.4"
