--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ name = "imgDB"
 
 [dependencies]
 argh = "0.1.10"
+base64 = "0.21.0"
 blake2 = "0.10.6"
 crc32fast = "1"
 digest = "0.10.6"
 glob = "0.3.1"
-image = "0.24.5"
+image = { version = "0.24.5", features = ["webp", "avif", "webp-encoder"] }
 rand = "0.8.5"
 rexiv2 = "0.10.0"
 serde = { version = "1", features = ["derive"] }
@@ -25,6 +26,7 @@ serde_json = "1"
 sha2 = "0.10.6"
 strum = { version = "0.24.1", features = ["derive"] }
 strum_macros = "0.24.3"
+upon = "0.6.0"
 
 [dev-dependencies]
 criterion = "0.4"
