--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ glob = "0.3.1"
 image = { version = "0.24.5", features = ["webp", "avif", "webp-encoder"] }
 rand = "0.8.5"
 rexiv2 = "0.10.0"
+ripemd = "0.1.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10.6"
