--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,22 +12,23 @@ description = "A image DB library"
 name = "imgDB"
 
 [dependencies]
-argh = "0.1.10"
-base64 = "0.21.0"
-blake2 = "0.10.6"
+argh = "0.1"
+base64 = "0.21"
+blake2 = "0.10"
 crc32fast = "1"
-digest = "0.10.6"
-glob = "0.3.1"
-image = { version = "0.24.5", features = ["webp", "avif", "webp-encoder"] }
-rand = "0.8.5"
-rexiv2 = "0.10.0"
-ripemd = "0.1.3"
+digest = "0.10"
+glob = "0.3"
+image = { version = "0.24", features = ["webp", "avif", "webp-encoder"] }
+rand = "0.8"
+rayon = "1"
+rexiv2 = "0.10"
+ripemd = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-sha2 = "0.10.6"
-strum = { version = "0.24.1", features = ["derive"] }
-strum_macros = "0.24.3"
-upon = "0.6.0"
+sha2 = "0.10"
+strum = { version = "0.24", features = ["derive"] }
+strum_macros = "0.24"
+upon = "0.6"
 
 [dev-dependencies]
 criterion = "0.4"
