--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ crc32fast = "1"
 digest = "0.10"
 glob = "0.3"
 image = { version = "0.24", features = ["webp", "avif", "webp-encoder"] }
+log = { version = "0.4", features = ["std", "serde"] }
 rand = "0.8"
 rayon = "1"
 rexiv2 = "0.10"
@@ -26,6 +27,7 @@ ripemd = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10"
+simple_logger = { version = "4", features = ["colors"] }
 strum = { version = "0.24", features = ["derive"] }
 strum_macros = "0.24"
 upon = "0.6"
